# libudaemon

./: CMakeLists.txt  README.md
cmake/: ud_version.h.in  udaemonConfig.cmake.in
example/: test_complete.c
include/: ud_utils.h  udaemon.h
include/udaemon/: ud_logging.h  ud_utils.h  ud_version.h  udaemon.h
src/: ud_logging.c  ud_utils.c  udaemon.c
